# HomeAssistantAcDefender

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HomeAssistantAcDefender.csproj  Program.cs  README.md  appsettings.Development.json  appsettings.json  docker-compose.yml
.claude/: launch.json
.github/workflows/: pages.yml
Components/: App.razor  Routes.razor  _Imports.razor
Guards/: GuardCatalog.cs  GuardModel.cs
HomeAssistantAcDefender.Tests/: HomeAssistantAcDefender.Tests.csproj  Program.cs  SettingsGitRepositoryRegressionTests.cs
Models/: ApiRequests.cs  DefenderStateModels.cs  SettingsRepositoryModels.cs  UsageModels.cs  WeatherBackupModels.cs
Options/: DefenderOptions.cs  HomeAssistantOptions.cs  KioskOptions.cs
Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs  Settings.cshtml  Settings.cshtml.cs  _ViewImports.cshtml
Properties/: launchSettings.json
Services/: AcDefenderService.cs  AcDefenderWorker.cs  AlectraTouRates.cs  CliCommands.cs  DefenderStateProvider.cs  DefenderStateStore.cs  GoogleDeviceLogin.cs  HomeAssistantClient.cs  HomeAssistantTokenStore.cs  HubKioskService.cs  Lang.cs  LearningTrainer.cs  OpenMeteoWeatherClient.cs  RivalScheduleWatch.cs  SdmCameraService.cs  SettingsGitRepository.cs  TwoFactorAuth.cs  WakeTruceService.cs  WikiContentService.cs  YueCommon.cs  YueGuards.cs  YuePages.cs  YueSettings.cs
desktop/: README.md  index.html  package-lock.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: _config.yml  index.html
(+111 files in other folders)
