[package]
name = "ac-defender-desktop"
version = "0.1.0"
description = "Desktop client for Home Assistant AC Defender"
authors = ["AC Defender"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ac_defender_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP happens on the Rust side (not the webview) so there are no CORS or cookie
# headaches: one client with a cookie store holds the signed-in session.
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["sync"] }
regex = "1"
